tests/fail/not-enum.rs
use struct_variant::struct_variant;

#[struct_variant]
struct ShapeStruct {
	value: usize,
}

fn main() {}
